Fixed a readability issue in a stylesheet

--- a/frontend/style/annotations/annotate.less
+++ b/frontend/style/annotations/annotate.less
@@ -162,9 +162,7 @@ i.check {
 		}
 	}
 
-	#label-tabs-contents
-
-	div {
+	#label-tabs-contents div {
 		padding: 0px;
 		&.carousel {
 			.row-fluid {
